--- a/templates/_includes/_navbar.html.twig
+++ b/templates/_includes/_navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark mb-3">
+<nav class="navbar navbar-expand-lg navbar-dark">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="{{path('app_main')}}"><img src="{{ asset('image/logo/logo.svg') }}" alt="logo" class="gp_nav_logo">
 </a>
