--- a/templates/_includes/_footer.html.twig
+++ b/templates/_includes/_footer.html.twig
@@ -1,6 +1,6 @@
 <div class="container footer mt-4">
-	<footer class="d-flex justify-content-around py-4">
-		<div class="col col-3 text-center">
+	<footer class=" row d-flex justify-content-around py-4">
+		<div class="col col-12 col-lg-3 text-center">
 			<p>Nos horaires d'ouvertures:</p>
 			<ul>
 				<li>Lundi: 08h00-18h00</li>
@@ -12,13 +12,13 @@
 				<li>Dimande: Fermé</li>
 			</ul>
 		</div>
-		<div class="col col-3 text-center">
+		<div class="col col-12 col-lg-3 text-center">
 			<p>Garage.V.Parrot</p>
 			Adresse : 123 Rue Imaginaire</br>
 			99999 Nullepart, France</br>
 			Téléphone : 01 23 45 67 89
 		</div>
-    	<div class="col col-3 text-center">
+    	<div class="col col-12 col-lg-3 text-center">
     		<p>Nous <a href="#" class="gp_link">contacter</a></p>
     		<p>Nos <a href="#" class="gp_link">CGU</a></p>
 			{% if app.user %}
