--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Connexion{% endblock %}
 {% block stylesheets %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ asset('assets/css/loginStyle.css') }}">
+    <link rel="stylesheet" href="{{ asset('assets/CSS/loginStyle.css') }}">
 {% endblock %}
 
 {% block body %}
