add admin dashboard

--- a/templates/_includes/_navbar.html.twig
+++ b/templates/_includes/_navbar.html.twig
@@ -16,6 +16,18 @@
 				<li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="#">Contact</a>
 				</li>
+				{% if app.user %}
+					{% if is_granted('ROLE_ADMIN') %}
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="{{path('app_admin')}}">Admin</a>
+						</li>
+					{% endif %}	
+					{% endif %}
+					
+				
+
+				
+
 			</ul>
 		</div>
 	</div>
