Add carController , apiCarController, carScript.js

--- a/templates/_includes/_navbar.html.twig
+++ b/templates/_includes/_navbar.html.twig
@@ -11,7 +11,7 @@
 					<a class="nav-link active" aria-current="page" href="{{path('app_main')}}">Accueil</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Nos véhicules</a>
+					<a class="nav-link active" aria-current="page" href="{{path('app_car')}}">Nos véhicules</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="#">Contact</a>
