--- a/templates/car/index.html.twig
+++ b/templates/car/index.html.twig
@@ -22,7 +22,7 @@
 	<section>
 	<div class="gp_filtre_container m-4">
 
-		<form method="POST" class="needs-validation m-3" novalidate>
+		<form method="GET" class="needs-validation m-3" id="filterForm" novalidate>
 			<div class="mb-3">
 				<h5 class="text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-filter me-2" viewbox="0 0 16 16">
@@ -104,7 +104,7 @@
 
 				</div>
 				<div class="mt-4 text-center">
-					<button type="submit" class="btn gp_button">Filtrer</button>
+					<button type="submit" class="btn gp_button" id="btnSubmit" disabled>Filtrer</button>
 				</div>
 
 			</form>
