--- a/templates/car/car_detail.html.twig
+++ b/templates/car/car_detail.html.twig
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col col-12 col-lg-6 d-flex justify-content-center align-items-center">
         <div class="image-galery d-none d-lg-block">
-            <div class="col col-6 mx-auto">
+            <div class="col col-6 mx-auto mt-4">
                 <div>
                     <img src="{{asset('images/cars/' ~ car.carImages[0])}}" alt="image de la voiture" class="img-fluid" id="gp_main-image_galery">
                     <div class="row mt-1">
