Add contact controller and view

--- a/templates/_includes/_navbar.html.twig
+++ b/templates/_includes/_navbar.html.twig
@@ -14,7 +14,7 @@
 					<a class="nav-link active" aria-current="page" href="{{path('app_car')}}">Nos véhicules</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="#">Contact</a>
+					<a class="nav-link active" aria-current="page" href="{{path('app_contact')}}">Contact</a>
 				</li>
 				{% if app.user %}
 					{% if is_granted('ROLE_ADMIN') %}
