--- a/templates/car/car_detail.html.twig
+++ b/templates/car/car_detail.html.twig
@@ -33,7 +33,7 @@
 
         </div>
         <div class="image-carousel d-block d-lg-none">
-            <div class="col col-8 mx-auto">
+            <div class="col col-8 mx-auto mt-4">
                 <div id="gp_carousel_image_detail" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         {% for image in car.carImages %}
