--- a/templates/car/index.html.twig
+++ b/templates/car/index.html.twig
@@ -21,15 +21,12 @@
 	<h3 class="text-center mt-5">Votre prochaine voiture vous attends ici!</h3>
 	<section>
 	<div class="gp_filtre_container m-4">
-
 		<form method="GET" class="needs-validation m-3" id="filterForm" novalidate>
 			<div class="mb-3">
 				<h5 class="text-center">
 					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-filter me-2" viewbox="0 0 16 16">
 						<path d="M6 10.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"/>
 					</svg>Filtre de recherche</h5>
-
-
 				<div class="row mt-4 d-flex justify-content-around">
 					<div class="col col-10 col-md-8 col-lg-4 d-flex justify-content-center mt-2">
 						<div class="row mx-2">
@@ -53,8 +50,6 @@
 							</div>
 						</div>
 					</div>
-
-
 					<div class="col col-10 col-md-8 col-lg-4 d-flex justify-content-center mt-2">
 						<div class="row mx-2">
 							<div>Kilométrage:</div>
@@ -77,7 +72,6 @@
 							</div>
 						</div>
 					</div>
-
 					<div class="col col-10 col-md-8 col-lg-4 d-flex justify-content-center mt-2">
 						<div class="row mx-2">
 							<div>Prix:</div>
@@ -100,26 +94,19 @@
 							</div>
 						</div>
 					</div>
-
-
 				</div>
 				<div class="mt-4 text-center">
 					<button type="submit" class="btn gp_button" id="btnSubmit" disabled>Filtrer</button>
 				</div>
-
 			</form>
-
-
 		</div>
 	</section>
+	<section class="d-flex justify-content-around">
 
-
-		<section>
-
-			<ul id="carCardContainer" class="row  d-flex justify-content-around"></ul>
-
-		</section>
-
+		<div id="carCardContainer" class="row d-flex justify-content-around">
+		
+		</div>
+	</section>
 		<script src="{{ asset('assets/JS/carScript.js') }}"></script>
 		<script src="{{ asset('assets/JS/validateForm.js') }}"></script>
 	{% endblock %}
