--- a/public/assets/CSS/accueilStyle.css
+++ b/public/assets/CSS/accueilStyle.css
@@ -7,3 +7,11 @@
     max-height: 282px;
     color: #f5f5f5;
   }
+
+
+  .gp_service_container {
+    background-color: #8B0000;
+    color: #f5f5f5;
+    padding: 20px;
+    border-radius: 20px;
+  }
