--- a/public/assets/CSS/mainStyle.css
+++ b/public/assets/CSS/mainStyle.css
@@ -13,6 +13,10 @@ h1 h2 h3 h4 h5 h6 {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+li {
+    list-style-type: none;
+}
+
 
 .gp_link {
     color: #8B0000;
@@ -52,6 +56,3 @@ h1 h2 h3 h4 h5 h6 {
     color: #f5f5f5;
 }
 
-.footer li {
-    list-style-type: none;
-}
