Add service twig openingHours

--- a/templates/_includes/_footer.html.twig
+++ b/templates/_includes/_footer.html.twig
@@ -2,15 +2,11 @@
 	<footer class=" row d-flex justify-content-around py-4">
 		<div class="col col-12 col-lg-3 text-center">
 			<p>Nos horaires d'ouvertures:</p>
-			<ul>
-				<li>Lundi: 08h00-18h00</li>
-				<li>Mardi: 08h00-18h00</li>
-				<li>Mercredi: 08h00-18h00</li>
-				<li>Jeudi: 08h00-18h00</li>
-				<li>Vendredi: 08h00-18h00</li>
-				<li>Samedi: 08h00-18h00</li>
-				<li>Dimande: Fermé</li>
-			</ul>
+				<ul class="text-start">
+				{% for day, hours in openingHourService.getOpeningHour %}
+					<li>{{ day }} : {{ hours }}</li>
+				{% endfor %}
+				</ul>
 		</div>
 		<div class="col col-12 col-lg-3 text-center">
 			<p>Garage.V.Parrot</p>
