--- a/public/assets/CSS/accueilStyle.css
+++ b/public/assets/CSS/accueilStyle.css
@@ -1,17 +1,53 @@
 .banniere {
-    background-image: url(../../image/banniere/banniereAccueil.jpg);
-    background-size: 100%;
-    background-position: center center;
-    background-repeat: no-repeat;
-    height: calc(100vw / 4);
-    max-height: 282px;
-    color: #f5f5f5;
-  }
+  background-image: url(../../image/banniere/banniereAccueil.jpg);
+  background-size: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  height: calc(100vw / 4);
+  max-height: 282px;
+  color: #f5f5f5;
+}
 
+.gp_service_container {
+  background-image: linear-gradient(rgba(139, 0, 0, 0.7), rgba(139, 0, 0, 0.7)), url('../../image/bg_image/bpa.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #f5f5f5;
+  padding: 20px;
+  border-radius: 20px;
+}
 
-  .gp_service_container {
-    background-color: #8B0000;
-    color: #f5f5f5;
-    padding: 20px;
-    border-radius: 20px;
+.gp_card_text {
+  white-space: pre-line;
+}
+.gp_card_main {
+  display: flex; /* Utilise flexbox pour permettre une meilleure gestion de l'espace */
+  flex-direction: column; /* Les éléments enfants s'empilent verticalement */
+  width: 33vw;
+  height: 20vw; /* Hauteur fixée à 20vw, ajuste cette valeur au besoin */
+  min-height: 250px;
+  margin: auto;
+  overflow: hidden;
+  background-image: linear-gradient(rgba(0, 72, 186, 0.7), rgba(0, 72, 186, 0.7)), url('../../image/bg_image/pja.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #f5f5f5;
+
+}
+
+.gp_card_img_main {
+  width: 100%; /* l'image prendra la largeur de son parent .gp_card_main */
+  height: 50%; /* l'image prendra 50% de la hauteur de .gp_card_main */
+  object-fit: contain; /* Toute l'image est visible, les proportions sont maintenues */
+  object-position: top; /* Positionne l'image en haut du cadre */
+}
+
+@media (max-width: 768px) {
+  .gp_card_main {
+    width: 80vw;
+    height: auto;
+    /* La hauteur sera dynamique pour maintenir le ratio de l'image */
   }
+}
