--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -44,7 +44,7 @@
             </ul>
         </div> 
 
-           
+		<!-- Carroussel  testimony -->
         {% endfor %}
     </div>
 </section>
@@ -52,17 +52,17 @@
 	<div class="row mt-5">
 		<div class="col col-md-6">
 			<h5 class="text-center">Ils nous ont fait confiance!</h5>
-			<div id="carouselTestimony" class="carousel carousel-dark slide col-6 mx-auto mt-3" data-bs-ride="carousel">
+			<div id="carouselTestimony" class="carousel carousel-dark slide col-8 mx-auto mt-3" data-bs-ride="carousel">
 				<div class="carousel-inner">
 					{% for testimony in testimonies %}
 						{% if loop.first %}
 							<div class="carousel-item active">
 								<div class="d-flex justify-content-center">
-									<div class="card" style="width: 18rem;">
-										<div class="card-body">
-											<h5 class="card-title">{{testimony.lastname}}
+									<div class="card gp_card_main" >
+										<div class="card-body d-flex flex-column align-items-center justify-content-center">
+											<h5 class="card-title">{{testimony.lastname}} <br>
 												{{testimony.firstname}}</h5>
-											<p class="card-text">{{testimony.message}}</p>
+											<p class="card-text gp_card_text 	">{{testimony.message}}</p>
 											<p>Note:
 												{{testimony.rating}}/5</p>
 										</div>
@@ -72,11 +72,11 @@
 						{% else %}
 							<div class="carousel-item">
 								<div class="d-flex justify-content-center">
-									<div class="card" style="width: 18rem;">
-										<div class="card-body">
-											<h5 class="card-title">{{testimony.lastname}}
+									<div class="card gp_card_main">
+										<div class="card-body d-flex flex-column align-items-center justify-content-center">
+											<h5 class="card-title">{{testimony.lastname}} <br>
 												{{testimony.firstname}}</h5>
-											<p class="card-text">{{testimony.message}}</p>
+											<p class="card-text gp_card_text">{{testimony.message}}</p>
 											<p>Note:
 												{{testimony.rating}}/5</p>
 										</div>
@@ -103,19 +103,19 @@
 				</button>
 			</div>
 		</div>
-
+		<!-- Carrousel car -->
 		<div class="col col-md-6">
 			<h5 class="text-center">Nos voiture d'occasion</h5>
-			<div id="carouselCar" class="carousel carousel-dark slide col-6 mx-auto mt-3" data-bs-ride="carousel">
+			<div id="carouselCar" class="carousel carousel-dark slide col-8 mx-auto mt-3" data-bs-ride="carousel">
 				<div class="carousel-inner">
 					{% for car in cars %}
 						{% if loop.first %}
 							<div class="carousel-item active">
 								<div class="d-flex justify-content-center">
-									<div class="card" style="width: 18rem;">
-										<div class="card-body">
-											<img src="{{asset('images/cars/' ~ car.carImages[0])}}" class="d-block w-100" alt="image de la voiture">
-											<h5 class="card-title">{{car.brand}}
+									<div class="card gp_card_main">
+										<div class="card-body d-flex flex-column align-items-center">
+											<img src="{{asset('images/cars/' ~ car.carImages[0])}}" class="gp_card_img_main" alt="image de la voiture">
+											<h5 class="card-title text-center">{{car.brand}}
 												{{car.model}}</h5>
 										</div>
 									</div>
@@ -125,10 +125,10 @@
 							<div class="carousel-item">
 								<div class="d-flex justify-content-center">
 									<div class="d-flex justify-content-center">
-									<div class="card" style="width: 18rem;">
-										<div class="card-body">
-											<img src="{{asset('images/cars/' ~ car.carImages[0])}}" class="d-block w-100" alt="image de la voiture">
-											<h5 class="card-title">{{car.brand}}
+									<div class="card gp_card_main">
+										<div class="card-body d-flex flex-column align-items-center">
+											<img src="{{asset('images/cars/' ~ car.carImages[0])}}" class="gp_card_img_main" alt="image de la voiture">
+											<h5 class="card-title text-center ">{{car.brand}}
 												{{car.model}}</h5>
 										</div>
 									</div>
